--- a/methods-public/index.html
+++ b/methods-public/index.html
@@ -19,7 +19,7 @@
       </div>
     </nav>
     <main>
-      <form action="/login?user=mahdi" method="POST">
+      <form action="/api/v1/login?user=mahdi" method="POST">
         <h3>Traditional Form</h3>
         <div class="form-row">
           <label for="name"> enter name </label>
